--- a/pacific.css
+++ b/pacific.css
@@ -37,8 +37,8 @@ header a:hover {color:#90C7E3}
 
 .section {float: left; width: 33%; padding-left: 2em; padding-right:2em;}
 
-#homehero {height: 300px; background-image: url(images/coast.jpg); background-repeat: no-repeat; background-size: 100% 100%; margin-left: 170px;}
+#homehero {height: 300px; background-image: url(coast.jpg); background-repeat: no-repeat; background-size: 100% 100%; margin-left: 170px;}
 
-#yurthero {height: 300px; background-image: url(images/yurt.jpg); background-repeat: no-repeat; background-size: 100% 100%;margin-left: 170px;}
+#yurthero {height: 300px; background-image: url(yurt.jpg); background-repeat: no-repeat; background-size: 100% 100%;margin-left: 170px;}
 
-#trailhero {height: 300px; background-image: url(images/trail.jpg); background-repeat: no-repeat; background-size: 100% 100%;margin-left: 170px;}
+#trailhero {height: 300px; background-image: url(trail.jpg); background-repeat: no-repeat; background-size: 100% 100%;margin-left: 170px;}
